# minecraft_image

./: .gitignore  Cargo.toml  README.md  blockdata.csv  materials.txt
src/: main.rs
